# lilygo-epd47-rs

./: Cargo.toml
src/: display.rs  ed047tc1.rs  lib.rs  rmt.rs
