[package]
name = "lilygo-epd47"
version = "0.5.0"
authors = ["Frido Koch <info@fridokoch.de>"]
description = "Simple driver for the LilyGo T5 4.7 inch E-Ink Display (HW-Version V2.3 / ESP32S3)"
readme = "README.md"
keywords = [
    "epd",
    "lilygo",
    "esp-hal",
    "ED047TC1",
    "embedded-graphics",
]
categories = [
    "embedded",
    "no-std",
]
license = "GPL-3.0"
repository = "https://github.com/fridolin-koch/lilygo-epd47-rs"
edition = "2021"

[lib]
name = "lilygo_epd47"
path = "src/lib.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
embedded-graphics-core = { version = "0.4.0", optional = true }
esp-alloc = "0.9.0"

[features]
default = ["embedded-graphics"]
embedded-graphics = ["embedded-graphics-core"]
